# tokenjuice-hermes

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_contract.py
tests/fixtures/: manifest.json  terminal-invalid.json  terminal-long.json  terminal-short.json
tokenjuice_hermes/: __init__.py  compaction.py  json_types.py  plugin.py  plugin.yaml
