[project]
name = "tokenjuice-hermes"
version = "0.1.0"
description = "Hermes plugin for compacting verbose terminal-like tool results."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "tokenjuice-hermes contributors" },
]
keywords = ["agent", "compaction", "hermes", "plugin", "tokenjuice"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/imadal1n/tokenjuice-hermes"
Issues = "https://github.com/imadal1n/tokenjuice-hermes/issues"
Source = "https://github.com/imadal1n/tokenjuice-hermes"

[dependency-groups]
dev = [
  "basedpyright>=1.35.0",
  "pytest>=9.0.0",
  "ruff>=0.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tokenjuice_hermes"]

[tool.hatch.build.targets.wheel.force-include]
"tokenjuice_hermes/plugin.yaml" = "tokenjuice_hermes/plugin.yaml"
"tokenjuice_hermes/py.typed" = "tokenjuice_hermes/py.typed"

[tool.hatch.build.targets.sdist]
include = [
  "/LICENSE",
  "/README.md",
  "/pyproject.toml",
  "/tests",
  "/tokenjuice_hermes",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",
  "D101",
  "D102",
  "D100",
  "D103",
  "D104",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "D", "PLR2004", "SLF001"]

[tool.basedpyright]
typeCheckingMode = "all"
pythonVersion = "3.11"
include = ["tokenjuice_hermes", "tests"]
